--- a/layouts/c-programming/single.html
+++ b/layouts/c-programming/single.html
@@ -34,7 +34,7 @@
           {{ range $.Site.Data.courses.cprogramming.intro}}
           <a
             href="/c-programming/{{.navUrl}}"
-            class="btn btn-block btn-secondary text-left"
+            class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
