--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,19 +14,35 @@
       href="../../img/logo/favicon.png"
       type="image/x-icon"
     />
-    <title>{{ if .Title }} {{ .Title }} | {{ end }} DIESMO 5</title>
+    <title>{{ if .Title }} {{ .Title }} | {{ end }} diesmo<i>5</i></title>
     {{ if .Description }}
     <meta name="description" content="{{ .Description }}" />
     {{ end }}
-    <title>diesmo5</title>
+    <title>diesmo<i>5</i></title>
 
-    <script data-ad-client="ca-pub-8734775679577509" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script
+      data-ad-client="ca-pub-8734775679577509"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-150415761-1"
     ></script>
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/a0f3186838415a0e37a8dc337/b10e2f13054db41529f2472b2.js");</script>
+    <script id="mcjs">
+      !(function(c, h, i, m, p) {
+        (m = c.createElement(h)),
+          (p = c.getElementsByTagName(h)[0]),
+          (m.async = 1),
+          (m.src = i),
+          p.parentNode.insertBefore(m, p);
+      })(
+        document,
+        "script",
+        "https://chimpstatic.com/mcjs-connected/js/users/a0f3186838415a0e37a8dc337/b10e2f13054db41529f2472b2.js"
+      );
+    </script>
   </head>
   <body class="" style="overflow-x: hidden;">
     <div class="text-yankees">
