--- a/layouts/c-programming/section.html
+++ b/layouts/c-programming/section.html
@@ -41,7 +41,7 @@
         <div class="py-5">
           <h4 class="font-weight-bold text-rose">Introduction</h4>
           {{ range $.Site.Data.courses.cprogramming.intro}}
-          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-secondary text-left"
+          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -49,7 +49,7 @@
         <div class="pb-5">
           <h4 class="font-weight-bold text-rose">Flow Control</h4>
           {{ range $.Site.Data.courses.cprogramming.flowcontrol }}
-          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-secondary text-left"
+          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -57,7 +57,7 @@
         <div class="pb-5">
           <h4 class="font-weight-bold text-rose">Functions</h4>
           {{ range $.Site.Data.courses.cprogramming.functions }}
-          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-secondary text-left"
+          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -65,7 +65,7 @@
         <div class="pb-5">
           <h4 class="font-weight-bold text-rose">Arrays</h4>
           {{ range $.Site.Data.courses.cprogramming.arrays }}
-          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-secondary text-left"
+          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -73,7 +73,7 @@
         <div class="pb-5">
           <h4 class="font-weight-bold text-rose">Pointers</h4>
           {{ range $.Site.Data.courses.cprogramming.pointers }}
-          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-secondary text-left"
+          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -81,7 +81,7 @@
         <div class="pb-5">
           <h4 class="font-weight-bold text-rose">Structs</h4>
           {{ range $.Site.Data.courses.cprogramming.structs }}
-          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-secondary text-left"
+          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -89,7 +89,7 @@
         <div class="pb-5">
           <h4 class="font-weight-bold text-rose">Resources</h4>
           {{ range $.Site.Data.courses.cprogramming.resources }}
-          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-secondary text-left"
+          <a href="/c-programming/{{.navUrl}}" class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -621,7 +621,7 @@
     <div class="py-5">
       <h2 class="font-weight-bold text-rose">Introduction</h2>
       {{ range $.Site.Data.courses.cprogramming.intro}}
-      <a href="{{.navUrl}}" class="btn btn-block btn-secondary text-left"
+      <a href="{{.navUrl}}" class="btn btn-block btn-grey text-left"
         >{{.navTitle}}</a
       >
       {{ end }}
@@ -629,7 +629,7 @@
     <div class="pb-5">
       <h2 class="font-weight-bold text-rose">Flow Control</h2>
       {{ range $.Site.Data.courses.cprogramming.flowcontrol }}
-      <a href="{{.navUrl}}" class="btn btn-block btn-secondary text-left p-3"
+      <a href="{{.navUrl}}" class="btn btn-block btn-grey text-left p-3"
         >{{.navTitle}}</a
       >
       {{ end }}
@@ -637,7 +637,7 @@
     <div class="pb-5">
       <h2 class="font-weight-bold text-rose">Functions</h2>
       {{ range $.Site.Data.courses.cprogramming.functions }}
-      <a href="{{.navUrl}}" class="btn btn-block btn-secondary text-left p-3"
+      <a href="{{.navUrl}}" class="btn btn-block btn-grey text-left p-3"
         >{{.navTitle}}</a
       >
       {{ end }}
@@ -645,7 +645,7 @@
     <div class="pb-5">
       <h2 class="font-weight-bold text-rose">Arrays</h2>
       {{ range $.Site.Data.courses.cprogramming.arrays }}
-      <a href="{{.navUrl}}" class="btn btn-block btn-secondary text-left p-3"
+      <a href="{{.navUrl}}" class="btn btn-block btn-grey text-left p-3"
         >{{.navTitle}}</a
       >
       {{ end }}
@@ -653,7 +653,7 @@
     <div class="pb-5">
       <h2 class="font-weight-bold text-rose">Pointers</h2>
       {{ range $.Site.Data.courses.cprogramming.pointers }}
-      <a href="{{.navUrl}}" class="btn btn-block btn-secondary text-left p-3"
+      <a href="{{.navUrl}}" class="btn btn-block btn-grey text-left p-3"
         >{{.navTitle}}</a
       >
       {{ end }}
@@ -661,7 +661,7 @@
     <div class="pb-5">
       <h2 class="font-weight-bold text-rose">Structs</h2>
       {{ range $.Site.Data.courses.cprogramming.structs }}
-      <a href="{{.navUrl}}" class="btn btn-block btn-secondary text-left p-3"
+      <a href="{{.navUrl}}" class="btn btn-block btn-grey text-left p-3"
         >{{.navTitle}}</a
       >
       {{ end }}
@@ -669,7 +669,7 @@
     <div class="pb-5">
       <h2 class="font-weight-bold text-rose">Resources</h2>
       {{ range $.Site.Data.courses.cprogramming.resources }}
-      <a href="{{.navUrl}}" class="btn btn-block btn-secondary text-left p-3"
+      <a href="{{.navUrl}}" class="btn btn-block btn-grey text-left p-3"
         >{{.navTitle}}</a
       >
       {{ end }}
