--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,11 +14,11 @@
       href="../../img/logo/favicon.png"
       type="image/x-icon"
     />
-    <title>{{ if .Title }} {{ .Title }} | {{ end }} diesmo<i>5</i></title>
+    <title>{{ if .Title }} {{ .Title }} | {{ end }} diesmo5</title>
     {{ if .Description }}
     <meta name="description" content="{{ .Description }}" />
     {{ end }}
-    <title>diesmo<i>5</i></title>
+    <title>diesmo5</title>
 
     <script
       data-ad-client="ca-pub-8734775679577509"
