--- a/layouts/live/section.html
+++ b/layouts/live/section.html
@@ -27,9 +27,10 @@
       something they are passionate about.
     </h5>
     <h2 class="py-5">Additional Resources:</h2>
-    <a href="https://code.visualstudio.com/" class="btn btn-block btn-grey text-left p-3">Visual Studio</a>
-    <a href="https://getbootstrap.com/" class="btn btn-block btn-grey text-left p-3">Bootstrap</a>
-    <a href="/live/web-development" class="btn btn-block btn-grey text-left p-3">Learning Guide</a>
+    <a href="https://code.visualstudio.com/" target="_blank" class="btn btn-block btn-grey text-left p-3">Visual Studio</a>
+    <a href="https://glitch.com/" target="_blank" class="btn btn-block btn-grey text-left p-3">Visual Studio</a>
+    <a href="https://getbootstrap.com/" target="_blank" class="btn btn-block btn-grey text-left p-3">Bootstrap</a>
+    <a href="/live/web-development" target="_blank" class="btn btn-block btn-grey text-left p-3">Learning Guide</a>
   </div>
 </section>
 
