case studies added

--- a/layouts/press/list.html
+++ b/layouts/press/list.html
@@ -8,9 +8,9 @@
         <img src="{{.Params.img}}" alt="{{.Params.alt}}" class="card-img" />
       </div>
       <div class="col-lg-6 col-12 my-auto py-3">
-        <h4 class="font-weight-bold">{{.Title}}</h4>
-        <small class="">Date: {{.Date.Format "Jan 2, 2006"}}</small>
-        <h6 class="font-weight-normal">{{.Description}}</h6>
+        <h4 class="font-weight-bold text-graphite">{{.Title}}</h4>
+        <small class="text-graphite-light">Date: {{.Date.Format "Jan 2, 2006"}}</small>
+        <h6 class="font-weight-normal text-graphite">{{.Description}}</h6>
         <a href="{{.URL}}" class="text-rose text-decoration-none">Read More ></a>
     </a>
       </div>
