--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -35,6 +35,7 @@
           >
             <a class="dropdown-item" href="/products">Marketing Materials</a>
             <a class="dropdown-item" href="/services">Client Services</a>
+            <a class="dropdown-item" href="/case-studies">Case Studies</a>
           </div>
         </li>
         <li class="nav-item dropdown">
