footer date updated

--- a/layouts/global-connect/section.html
+++ b/layouts/global-connect/section.html
@@ -1,6 +1,11 @@
 {{ define "main"}}
 <!--  -->
 {{partial "globalnav"}}
+
+<section id="hero" class="vh-100">
+  
+</section>
+
 <section id="header" class="container text-center pt-5">
   <img src="/img/projects/global-connect/globe.png" alt="" class="w-25" />
   <h1 class="font-weight-bold">Global Connect Initiative</h1>
