--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -118,7 +118,7 @@
       {{end}}
     </div>
     <div class="row justify-content-end py-1">
-      <p href="" class="text-small text-graphite px-1">Copyright &copy; 2016 -  <script type="text/javascript">document.write(new Date().getFullYear());</script>, diesmo5, Inc. - All Rights Reserved</p>
+      <p href="" class="text-small text-graphite px-1">Copyright &copy; 2019 - 2020, diesmo5, Inc. - All Rights Reserved</p>
     </div>
   </div>
 </footer>
