--- a/layouts/partials/scriptcode.html
+++ b/layouts/partials/scriptcode.html
@@ -8,9 +8,9 @@
   AOS.init();
 </script>
 <script>
-$('.carousel').carousel({
-  interval: 4000
-})
+  $(".carousel").carousel({
+    interval: 4000
+  });
 </script>
 <!-- ManyChat -->
 <script src="//widget.manychat.com/2134082696866712.js" async="async"></script>
