global connect link updated

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -114,12 +114,13 @@
             class="dropdown-menu border-0"
             aria-labelledby="navbarDropdownMenuLink"
           >
+            <a class="dropdown-item" href="/collaborate">General Overview</a>
             <a class="dropdown-item" href="/hackathons">Hackathons</a>
             <a class="dropdown-item" href="/speaking-engagements"
               >Speaking Engagements</a
             >
             <a class="dropdown-item" href="/workshops">Workshops</a>
-            <a class="dropdown-item" target="_blank" href="/global-connect"
+            <a class="dropdown-item" target="_blank" href="https://globalconnect.diesmo5.com/"
               >Global Connect Initiative</a
             >
           </div>
