sudocore link updated

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -93,7 +93,7 @@
             class="dropdown-menu border-0"
             aria-labelledby="navbarDropdownMenuLink"
           >
-            <a class="dropdown-item" target="_blank" href="https://sudocore.dev"
+            <a class="dropdown-item" target="_blank" href="https://sudocore.diesmo5.com"
               >Sudocore</a
             >
           </div>
