global connect card added

--- a/layouts/global-connect/section.html
+++ b/layouts/global-connect/section.html
@@ -1,170 +1,17 @@
 {{ define "main"}}
 <!--  -->
-{{partial "globalnav"}}
-
-<section id="hero" class="vh-100">
-  
-</section>
-
-<section id="header" class="container text-center pt-5">
-  <img src="/img/projects/global-connect/globe.png" alt="" class="w-25" />
-  <h1 class="font-weight-bold">Global Connect Initiative</h1>
-  <h3 class="font-weight-light pb-4">
-    Join the largest community of developers, designers, and entrepreneurs.
-  </h3>
-  <a href="" class="btn btn-yankees rounded-0 px-5 py-2">Join Our Community</a>
-  <div class="py-4">
-    <hr class="" />
+{{ partial "navbar" }}
+<section id="content" class="py-5">
+  <div class="container bg-grey-light rounded p-5">
+    <h1 class="">Global Connect Initiative</h1>
+    <h2 class="font-weight-light py-3">We have parked this division of diesmo5 on a different domain.</h2>
+    <a href="https://globalconnect.diesmo5.com" target="_blank" class="">
+      <h3>globalconnect.diesmo5.com</h2>
+    </a>
+    <h6 class="py-2">Or</h6>
+    <a href="https://globalconnect.diesmo5.com" target="_blank" class="btn btn-lg rounded-0 btn-yankees px-5 pt-2">Visit Our Global Connect Website Here</a>
   </div>
 </section>
 
-<section class="container py-5">
-  <div class="row">
-    <div class="col-lg-9 col-md-9 col-12">
-      <div class="py-5">
-        <div class="text-center">
-          <img
-            src="/img/projects/global-connect/environmental-study.svg"
-            alt=""
-            class="w-50 pb-5"
-          />
-        </div>
-        <h2 class="font-weight-bold">Premise</h2>
-        <p>
-          What if we could directly tap the student community? What if we could
-          give them a place to ask mentors for advice, collaborate with peers,
-          and stay informed with the ever growing technologies of today? What if
-          students expanded their knowledge and applied their skills beyond the
-          typical classroom setting?
-        </p>
-      </div>
-      <div class="py-5">
-        <div class="text-center">
-          <img
-            src="/img/projects/global-connect/connected-world.svg"
-            alt=""
-            class="w-50 pb-5"
-          />
-        </div>
-        <h2 class="font-weight-bold">Manifesto</h2>
-        <p>
-          diesmo5 is committed to building a global community through a free
-          chat server that brings diverse groups of people together. diesmo5
-          will distribute monthly newsletters that will showcase relevant
-          articles, free resources, upcoming events, and job opportunities.
-          diesmo5 will support non-profits & school organizations in helping
-          students develop skills in the field of IT.
-        </p>
-      </div>
-      <div class="py-5">
-        <div class="text-center">
-          <img
-            src="/img/projects/global-connect/share.svg"
-            alt=""
-            class="w-50 pb-5"
-          />
-        </div>
-        <h2 class="font-weight-bold">Our Chat Server</h2>
-        <p>
-          diesmo5 has designed a Discord Server that allows students and mentors
-          ask each other questions, get help on projects, network with their
-          peers, and share their journey in a safe place filled with like minded
-          people. Join our server and meet new people.
-        </p>
-      </div>
-      <div class="py-5">
-        <div class="text-center">
-          <img
-            src="/img/projects/global-connect/newsletter.svg"
-            alt=""
-            class="w-50 pb-5"
-          />
-        </div>
-        <h2 class="font-weight-bold">Our Newsletter</h2>
-        <p>
-          diesmo5 has an entire team dedicated in compiling & creating the most
-          value-driven newsletter. The newsletter is intended to highlight new
-          technologies & resources that are available to help students and
-          professionals keep up with the continuously changing tech world. It
-          will also promote local events and job opportunities.
-        </p>
-      </div>
-      <div class="py-5">
-        <div class="text-center">
-          <img
-            src="/img/projects/global-connect/courses.svg"
-            alt=""
-            class="w-50 pb-5"
-          />
-        </div>
-        <h2 class="font-weight-bold">Our Courses</h2>
-        <p>
-          diesmo5 has partnered with local tech companies & engineers to compile
-          free digital courses students can use to enhance their skills in
-          software and hardware development. The purpose of these courses is not
-          to re-invent the wheel, rather to get rid of all the noise. Thousands
-          of pieces of educational content already exist, our job is to compile
-          the ones that bring the most value and sequence it in a purposeful way
-          in which our so that our students will be empowered to build projects
-          of their own.
-        </p>
-      </div>
-      <div class="py-5">
-        <div class="text-center">
-          <img
-            src="/img/projects/global-connect/team-support.svg"
-            alt=""
-            class="w-50 pb-5"
-          />
-        </div>
-        <h2 class="font-weight-bold">Our Support</h2>
-        <p>
-          diesmo5 offers support when it comes to events, hackathons, workshops,
-          and student projects in the form of providing free software, funding,
-          and mentors. Reach out to us to collaborate on your next project.
-        </p>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-3 col-12">
-      <a
-        href="https://hackiloilo.com"
-        target="_blank"
-        class="text-decoration-none"
-      >
-        <div class="card bg-light p-2">
-          <div class="row">
-            <div class="col-lg-6 col-12">
-              <img src="/img/ads/hack-iloilo.jpg" alt="" class="w-100" />
-            </div>
-            <div class="col-lg-6 col-12 py-2">
-              <p class="text-small text-dark">
-                Compete in the biggest hackathon in Iloilo City, Philippines
-              </p>
-              <p class="text-small text-secondary">ads via diesmo5</p>
-            </div>
-          </div>
-        </div>
-      </a>
-      <div class="pt-5">
-        <a
-          class="twitter-timeline"
-          href="https://twitter.com/diesmo5?ref_src=twsrc%5Etfw"
-          data-tweet-limit="4"
-          >Tweets by diesmo5</a
-        >
-        <script
-          async
-          src="https://platform.twitter.com/widgets.js"
-          charset="utf-8"
-        ></script>
-      </div>
-    </div>
-  </div>
-  <div class="text-center">
-    <a href="" class="btn btn-yankees rounded-0 px-5 py-2"
-      >Join Our Community</a
-    >
-  </div>
-</section>
 
 {{end}}
