--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,6 +9,13 @@
     <!--  -->
     <link rel="stylesheet" href="../../css/style.min.css" />
 
+    <link rel="apple-touch-icon" sizes="180x180" href="../../img/logo/180x180.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../../img/logo/32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../../img/logo/16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="../../img/logo/svg.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#9f00a7" />
+    <meta name="theme-color" content="#ffffff" />
     <link
       rel="shortcut icon"
       href="../../img/logo/favicon.png"
