updated footer link

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,19 +8,19 @@
       This web page is currently under development. Check back soon...
     </h1>
     <div class="row">
-      <div class="col-lg-4 col-md-4 col-12 py-2">
+      <div class="col-lg-4 col-md-4 col-12 px-3 py-2">
         <a href="/" class="btn btn-block btn-yankees px-5 py-3 font-weight-bold"
           >Home</a
         >
       </div>
-      <div class="col-lg-4 col-md-4 col-12 py-2">
+      <div class="col-lg-4 col-md-4 col-12 px-3 py-2">
         <a
           href="/services/"
           class="btn btn-block btn-yankees px-5 py-3 font-weight-bold"
           >Services</a
         >
       </div>
-      <div class="col-lg-4 col-md-4 col-12 py-2">
+      <div class="col-lg-4 col-md-4 col-12 px-3 py-2">
         <a
           href="/global-connect/"
           class="btn btn-block btn-yankees px-5 py-3 font-weight-bold"
