--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -56,7 +56,7 @@
           <ul class="list-unstyled">
             {{range $.Site.Data.nav.developer}}
             <li class="list-unstyled">
-              <a href="/{{.navUrl}}" class="text-small text-graphite">{{.navTitle}}</a>
+              <a href="{{.navUrl}}" target="_blank" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
