--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -72,7 +72,7 @@
             </li>
             {{end}}
             <li class="list-unstyled">
-              <a href="https://globalconnect.diesmo5.com/" class="text-small text-graphite">Global Connect Initiative</a>
+              <a href="https://globalconnect.diesmo5.com/" target="_blank" class="text-small text-graphite">Global Connect Initiative</a>
             </li>
           </ul>
         </div>
