--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
 <section class="container py-3">
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="/">
-      <img src="/img/logo/icon.png" width="70px" alt="diesmo5-logo" />
+      <img src="/img/logo/svg.svg" width="60px" alt="diesmo5-logo" />
     </a>
     <button
       class="navbar-toggler border-0"
