--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,13 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!--  -->
-    {{partial "csscode" .}}
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://sudocore.dev/sudocore/5.0.0/sudocore.min.css"
+    />
     <!--  -->
     <link rel="stylesheet" href="../../css/style.min.css" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="../../img/logo/180x180.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="../../img/logo/32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="../../img/logo/16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../../img/logo/180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../../img/logo/32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../../img/logo/16x16.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="mask-icon" href="../../img/logo/svg.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#9f00a7" />
@@ -55,6 +77,51 @@
     <div class="text-yankees">
       {{ block "main" . }} {{ end }}
     </div>
-    {{ partial "footer" . }} {{ partial "scriptcode" . }}
+    {{ partial "footer" . }}
+    <!--  -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script id="mcjs">
+      !(function(c, h, i, m, p) {
+        (m = c.createElement(h)),
+          (p = c.getElementsByTagName(h)[0]),
+          (m.async = 1),
+          (m.src = i),
+          p.parentNode.insertBefore(m, p);
+      })(
+        document,
+        "script",
+        "https://chimpstatic.com/mcjs-connected/js/users/a0f3186838415a0e37a8dc337/b10e2f13054db41529f2472b2.js"
+      );
+    </script>
+    <script>
+      AOS.init();
+    </script>
+    <script>
+      $(".carousel").carousel({
+        interval: 4000
+      });
+    </script>
+    <!-- ManyChat -->
+    <script
+      src="//widget.manychat.com/2134082696866712.js"
+      async="async"
+    ></script>
+    <!--  -->
   </body>
 </html>
