--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -96,10 +96,10 @@
       });
     </script>
     <!-- ManyChat -->
-    <script
+    <!-- <script
       src="//widget.manychat.com/2134082696866712.js"
       async="async"
-    ></script>
+    ></script> -->
     <!--  -->
   </body>
 </html>
